--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
+<!--
+Name: Michael Tejeda
+UnityID:mttejeda
+Date: Nov 6th 2024
+Assignment: Guided Lab 4
+Description: Guided Lab Assignment, about me webpage
+-->
 <html lang="en-US">
-
-    <head>
+<head>
         <meta charset="UTF-8" />
-        <title>My test page</title>
+        <title>About Michael Tejeda</title>
+        <link href="webpagesGL.css" rel="stylesheet" type="text/css" />
     </head>
+<body style="background-color: #008473;">
+<!--Here is our welcome message -->
+    <header>
+        <h2>Welcome to my about me page!</h2>
+    </header>
     
-    <body>
-    <p>This is my page</p>    
+    <hr />
+    <!-- A photo I like -->
+     <img src="mfdoom.jpeg" alt="A photo of the album MF Doom madvilliany cover" id="photo-resize"> 
+    <p> Hello My name is Michael Tejeda, my favorite part of campus are the tunnels. I like to go from Riddick, Dabney, or Hill to Tally around 11 am so I can have one earth. Then I sit and finish homework before I go to Carmichael to workout and do cardio for overall 2-2.5 hours</p>    
 
-    </body>
+
+<!-- starting out with HTML Styles-->
+    <p>
+        C<sub><8/sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub> is my favorite <del>element</del> <ins>chemical</ins>formula. E = mc<sup>2</sup> is my favorite equation.
+    </p>
+<br />
+<br />
+<!--unordered but still very important -->
+<h4>A list of my favorite things</h4>
+
+    <ul>
+    <li>Gym</li>
+    <li>Coffee</li>
+    <li>Understanding hard topics</li>
+    <li>Spending time with Family</li>
+    <li>Sleeping</li>
+    </ul>
+<!-- To show I can make a table -->
+    <table class="table-border">
+        <tr><th>Name</th> <th>Characteristics</th> </tr>
+        <tr><td>Michael Tejeda</td> <td>Good adapting skills</td></tr>
+        <tr><td>Mom</td> <td>Great life lesson sayings</td></tr>
+    </table>
+
+<!-- A link to the most scary place at NC State.....the internet *gasp* -->
+    <a href="https://www.gradescope.com/" target="blank">Gradescope</a>
+</body> 
 </html>
