--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -26,7 +26,7 @@ Description: Guided Lab Assignment, about me webpage
 
 <!-- starting out with HTML Styles-->
     <p>
-        C<sub><8/sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub> is my favorite <del>element</del> <ins>chemical</ins>formula. E = mc<sup>2</sup> is my favorite equation.
+        C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub> is my favorite <del>element</del> <ins>chemical</ins>formula. E = mc<sup>2</sup> is my favorite equation.
     </p>
 <br />
 <br />
